# lt

./: .gitattributes  .gitignore  .graphqlrc.yml  .jscpd.json  .markdownlint-cli2.jsonc  .mcp.json  .nvim.lua  AGENTS.md  Cargo.toml  LICENSE  Makefile  README.md  build.rs  clippy.toml  deny.toml  flake.nix  rust-toolchain.toml  rustfmt.toml
.beads/: .gitignore  issues.jsonl
.claude/: .gitignore  CLAUDE.md  settings.json
.claude/agents/: lt-check-runner.md  lt-file-editor.md
.claude/commands/: ox-cart-done.md  ox-cart-drop.md  ox-cart-start.md  ox-cart.md  ox-doctor.md  ox-init.md  ox-prime.md  ox-session-abort.md  ox-session-list.md  ox-session-review.md  ox-session-start.md  ox-session-status.md  ox-session-stop.md  ox-status.md  ox.md
.claude/hooks/: pre-tool-use
.claude/rules/: ox.md
.codex/: hooks.json
.forgejo/workflows/: ci.yml
.github/: README.md  actionlint.yml  dependabot.yml
.github/workflows/: ci.yml
.sageox/: .gitignore  .repo_019e46c3-8802-7e8f-8695-360754fb2b15  README.md  config.json
crates/linear-schema/: Cargo.toml  build.rs
crates/linear-schema/src/: lib.rs
crates/lt-cli/: Cargo.toml
crates/lt-cli/src/: adapter.rs  auth.rs  logging.rs  main.rs  search.rs  sim.rs  sync.rs
crates/lt-cli/src/inbox/: display.rs  mod.rs
crates/lt-cli/src/inbox/snapshots/: lt__inbox__display__tests__print_table_snapshot.snap
crates/lt-cli/src/issues/: display.rs  list.rs  mod.rs  new.rs
crates/lt-cli/src/issues/snapshots/: lt__issues__display__tests__cached_table_snapshot_from_sim.snap
crates/lt-config/: Cargo.toml
crates/lt-runtime/: Cargo.toml
crates/lt-runtime/src/: adapter.rs  auth.rs  comments.rs  issues.rs  lib.rs  notifications.rs  ops.rs  runtime.rs  subscription.rs  sync_cmd.rs  sync_port.rs  teams.rs
crates/lt-runtime/src/sync/: delta.rs  drain.rs  full.rs  mod.rs  probe.rs  service.rs
crates/lt-schema-codegen/: Cargo.toml
crates/lt-schema-codegen/src/: affinity.rs  classify.rs  emit_ddl.rs  emit_grammar.rs  emit_sql.rs  lib.rs  ref_fragment.rs  schema_model.rs  search_fields.rs  selection_model.rs  test_fixtures.rs
crates/lt-schema-codegen/src/snapshots/: lt_schema_codegen__emit_ddl__tests__issues_create_table_snapshot.snap  lt_schema_codegen__emit_grammar__tests__filter_grammar_snapshot.snap  lt_schema_codegen__emit_grammar__tests__sort_grammar_snapshot.snap  lt_schema_codegen__emit_sql__tests__issues_delete_snapshot.snap  lt_schema_codegen__emit_sql__tests__issues_select_snapshot.snap  lt_schema_codegen__emit_sql__tests__issues_update_snapshot.snap  lt_schema_codegen__emit_sql__tests__issues_upsert_snapshot.snap  lt_schema_codegen__ref_fragment__tests__issue_ref_token_stream_snapshot.snap
crates/lt-storage/: Cargo.toml  build.rs
crates/lt-storage/benches/: seed.rs
crates/lt-storage/src/: fake.rs  lib.rs  query.rs  search_query.rs  sim.rs  sync_port.rs  text.rs
crates/lt-storage/src/db/: comments.rs  crud.rs  detail.rs  filters.rs  generated_sql_tests.rs  issues.rs  mod.rs  op_log.rs  ops.rs  outbox.rs  sql.rs  teams.rs  viewer.rs
crates/lt-sync/: Cargo.toml
crates/lt-sync/src/: client.rs  lib.rs  list.rs  mutations.rs  notifications.rs  viewer.rs
crates/lt-sync/src/auth/: login.rs  mod.rs  refresh.rs
crates/lt-sync/src/sync/: comments.rs  delta.rs  drain.rs  full.rs  mod.rs
crates/lt-tui/: Cargo.toml
crates/lt-tui/src/: detail.rs  lib.rs  list.rs  loop_tests.rs  markdown.rs  new_issue.rs  popup.rs  render_tests.rs  search_completer.rs  sync.rs  text_input.rs
crates/lt-tui/src/keymap/: action.rs  key.rs  mod.rs
crates/lt-tui/src/keymap/snapshots/: lt_tui__keymap__tests__binding_snapshot.snap  lt_tui__keymap__tests__help_rows_snapshot.snap
crates/lt-tui/src/present/: comment.rs  issue.rs  mod.rs
crates/lt-tui/src/snapshots/: lt_tui__render_tests__detail_overlay.snap  lt_tui__render_tests__empty_list.snap  lt_tui__render_tests__help_popup.snap  lt_tui__render_tests__list_view.snap  lt_tui__render_tests__list_view_wide_terminal_grows_title_column.snap  lt_tui__render_tests__new_issue_modal.snap  lt_tui__render_tests__priority_popup.snap  lt_tui__render_tests__search_overlay.snap
crates/lt-tui/src/ui/: chrome.rs  detail.rs  help.rs  mod.rs  new_issue.rs  popup.rs  search.rs  table.rs  text_span.rs  util.rs
crates/lt-types/: Cargo.toml  build.rs
crates/lt-types/src/: clock.rs  comments.rs  detail.rs  graphql.rs  inputs.rs  issues.rs  lib.rs  members.rs  new_issue.rs  notifications.rs  pagination.rs  query.rs  scalars.rs  states.rs  sync_dto.rs  teams.rs  types.rs  viewer.rs  wire.rs
crates/lt-upstream/: Cargo.toml  build.rs
crates/lt-upstream/src/: client.rs  comments.rs  graphql.rs  issues.rs  lib.rs  members.rs  notifications.rs  states.rs  teams.rs  transport.rs  viewer.rs
crates/lt-upstream/src/auth/: login.rs  logout.rs  mod.rs  refresh.rs  status.rs
crates/lt-upstream/src/query/: clock.rs  comments.rs  detail.rs  graphql.rs  inputs.rs  issues.rs  members.rs  mod.rs  new_issue.rs  notifications.rs  pagination.rs  sort.rs  states.rs  teams.rs  types.rs  viewer.rs
crates/lt-upstream/src/sync/: delta.rs  drain.rs  full.rs  mod.rs  probe.rs
docs/: agents.md  architecture.md
docs/agents/: beads.md  jj.appendix.md  jj.md  nix.md
docs/design/: deterministic-simulation-testing-adr.md  dst.md  keybinds.md  linear-api-types-codegen.md  mutation-seam-adr.md  operation-seam-adr.md  schema-codegen-program-adr.md  search-codegen-and-filter-expansion-adr.md  search-parser-v2-adr.md  search-parser-v2.md  search-query-parser-adr.md  tab-completion-fix-adr.md  test-coverage-gate.md  tui-app-event-queue-adr.md  tui-modal.md  tui-refactor-plan.md  type-safe-sql-adr.md  unified-execute-adr.md  unified-filter-state.md  visual-rendering-tests.md
docs/reference/: linear-schema-definition.graphql
docs/rules/: contributing.md  documentation.md  language.md  nix.md  posture.md  rust.md  testing.md
nix/: advisory-db.nix  devshell.nix  formatter.nix
scripts/: resolve-beads-merge.py
src/: config.rs  logging.rs  main.rs  output.rs  search.rs  text.rs
src/auth/: login.rs  logout.rs  mod.rs  (+2 more)
(+63 files in other folders)
