[package]
name = "lt"
version = "0.3.2"
edition = "2024"
description = "A local-first Linear TUI for terminal power users"
license = "MIT"
homepage = "https://github.com/willruggiano/lt"
repository = "https://github.com/willruggiano/lt"
readme = "README.md"
keywords = ["linear", "tui", "terminal", "productivity"]
categories = ["command-line-utilities"]

# chumsky is used only by the parser generated into OUT_DIR/search_stems.rs,
# which cargo-machete does not scan, so it would otherwise read as unused.
[package.metadata.cargo-machete]
ignored = ["chumsky"]

[dependencies]
anyhow = "1"
crossterm = "0.29"
base64 = "0.22"
clap = { version = "4.6", features = ["derive"] }
dirs = "6"
open = "5"
rand = "0.10"
ratatui = "0.30.0"
rusqlite = { version = "0.40", features = ["bundled"] }
chrono = { version = "0.4", features = ["clock"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.11"
ureq = { version = "3", features = ["json"] }
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
url = "2"
chumsky = "0.13"

[build-dependencies]
graphql-parser = "0.4"
toml = "1"
serde = { version = "1", features = ["derive"] }
quote = "1"
proc-macro2 = "1"
syn = { version = "2", default-features = false, features = ["full", "parsing"] }
prettyplease = "0.2"

[lints.rust]
unsafe_code = "forbid"
unused = { level = "deny", priority = -1 }

[lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }
cargo = { level = "deny", priority = -1 }
# Transitive dependencies pull in duplicate versions we do not control.
multiple_crate_versions = { level = "allow", priority = 1 }
# Complexity gates (nursery lints enabled individually rather than the whole
# noisy group); thresholds live in clippy.toml.
cognitive_complexity = "deny"
excessive_nesting = "deny"
# Panic-safety: forbid the shortcuts coding agents reach for. Tests are exempt
# via clippy.toml.
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
todo = "deny"
unimplemented = "deny"
dbg_macro = "deny"
print_stdout = "deny"
print_stderr = "deny"
