[workspace]
members = ["crates/*"]
resolver = "3"

[workspace.package]
version = "0.4.0"
edition = "2024"
license = "MIT"
homepage = "https://github.com/willruggiano/lt"
repository = "https://github.com/willruggiano/lt"

[workspace.dependencies]
# Internal crates
lt-config = { path = "crates/lt-config" }
lt-types = { path = "crates/lt-types" }
lt-storage = { path = "crates/lt-storage" }
lt-sync = { path = "crates/lt-sync" }
lt-tui = { path = "crates/lt-tui" }

# Third-party
anyhow = "1"
base64 = "0.22"
chrono = { version = "0.4", features = ["clock"] }
chumsky = "0.13"
clap = { version = "4.6", features = ["derive"] }
crossterm = "0.29"
cynic = { version = "3.13", default-features = false }
dirs = "6"
fake = { version = "5.1.0", default-features = false }
open = "5"
pulldown-cmark = { version = "0.13.4", default-features = false }
rand = "0.10"
ratatui = "0.30.0"
rusqlite = { version = "0.40", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.11"
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
ureq = { version = "3", features = ["json"] }
url = "2"

# Build dependencies
cynic-codegen = "3.13"
graphql-parser = "0.4"
prettyplease = "0.2"
proc-macro2 = "1"
quote = "1"
syn = { version = "2", default-features = false, features = ["full", "parsing"] }
toml = "1"

# Dev dependencies
insta = "1.48.0"

[workspace.lints.rust]
unsafe_code = "forbid"
unused = { level = "deny", priority = -1 }

[workspace.lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }
cargo = { level = "deny", priority = -1 }
# Transitive dependencies pull in duplicate versions we do not control.
multiple_crate_versions = { level = "allow", priority = 1 }
# Internal workspace crates are not published; publishing metadata is noise.
cargo_common_metadata = { level = "allow", priority = 1 }
# The crates form an internal workspace API, not a published library, so the
# public-API doc/annotation polish lints below are noise for that audience.
missing_errors_doc = { level = "allow", priority = 1 }
missing_panics_doc = { level = "allow", priority = 1 }
must_use_candidate = { level = "allow", priority = 1 }
# Complexity gates (nursery lints enabled individually rather than the whole
# noisy group); thresholds live in clippy.toml.
cognitive_complexity = "deny"
excessive_nesting = "deny"
# Panic-safety: forbid the shortcuts coding agents reach for. Tests are exempt
# via clippy.toml.
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
todo = "deny"
unimplemented = "deny"
dbg_macro = "deny"
print_stdout = "deny"
print_stderr = "deny"
