[workspace]
members = ["crates/*"]
resolver = "3"

[workspace.package]
version = "0.7.1"
edition = "2024"
license = "MIT"
homepage = "https://github.com/willruggiano/lt"
repository = "https://github.com/willruggiano/lt"
description = "A local-first Linear TUI for terminal power users"

[workspace.dependencies]
anyhow = "1"
base64 = "0.22"
chrono = { version = "0.4", features = ["clock"] }
cynic = { version = "3.13", default-features = false }
cynic-codegen = { version = "3.13", features = ["rkyv"] }
dirs = "6"
insta = "1.48.0"
linear-schema = { path = "crates/linear-schema" }
lt-config = { path = "crates/lt-config" }
lt-runtime = { path = "crates/lt-runtime" }
lt-schema-codegen = { path = "crates/lt-schema-codegen" }
lt-storage = { path = "crates/lt-storage" }
lt-tui = { path = "crates/lt-tui" }
lt-types = { path = "crates/lt-types" }
lt-upstream = { path = "crates/lt-upstream" }
open = "5"
rand = "0.10"
rusqlite = { version = "0.40", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"

[workspace.lints.rust]
unsafe_code = "forbid"
unused = { level = "deny", priority = -1 }

[workspace.lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }
cargo = { level = "deny", priority = -1 }
# Transitive dependencies pull in duplicate versions we do not control.
multiple_crate_versions = { level = "allow", priority = 1 }
# Internal workspace crates are not published; publishing metadata is noise.
cargo_common_metadata = { level = "allow", priority = 1 }
# The crates form an internal workspace API, not a published library, so the
# public-API doc/annotation polish lints below are noise for that audience.
missing_errors_doc = { level = "allow", priority = 1 }
missing_panics_doc = { level = "allow", priority = 1 }
must_use_candidate = { level = "allow", priority = 1 }
# Complexity gates (nursery lints enabled individually rather than the whole
# noisy group); thresholds live in clippy.toml.
cognitive_complexity = "deny"
excessive_nesting = "deny"
# Panic-safety: forbid the shortcuts coding agents reach for. Tests are exempt
# via clippy.toml.
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
todo = "deny"
unimplemented = "deny"
dbg_macro = "deny"
print_stdout = "deny"
print_stderr = "deny"
# No silent error drops (docs/design/tui-app-event-queue-adr.md, Decision 11).
let_underscore_must_use = "deny"
let_underscore_untyped = "deny"
