[package]
name = "linear-schema"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[dependencies]
cynic = { version = "3.13", default-features = false }

[build-dependencies]
cynic-codegen = { version = "3.13", features = ["rkyv"] }

[lints]
workspace = true
