[package]
name = "lt-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false
description = "A local-first Linear TUI for terminal power users"
homepage.workspace = true
repository.workspace = true
readme = "../../README.md"
keywords = ["linear", "tui", "terminal", "productivity"]
categories = ["command-line-utilities"]

[[bin]]
name = "lt"
path = "src/main.rs"

[dependencies]
lt-config.workspace = true
lt-types.workspace = true
lt-storage.workspace = true
lt-sync.workspace = true
lt-tui.workspace = true
anyhow.workspace = true
chrono.workspace = true
clap.workspace = true
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-appender.workspace = true
tracing-subscriber.workspace = true

[dev-dependencies]
insta.workspace = true

[features]
sim = ["lt-storage/sim"]

[lints]
workspace = true
