[package]
name = "lt-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false
description.workspace = true
homepage.workspace = true
repository.workspace = true
readme = "../../README.md"
keywords = ["linear", "tui", "terminal", "productivity"]
categories = ["command-line-utilities"]

[[bin]]
name = "lt"
path = "src/main.rs"

[dependencies]
lt-config.workspace = true
lt-types.workspace = true
lt-runtime.workspace = true
lt-tui.workspace = true
anyhow.workspace = true
tracing.workspace = true
# Crate-specific: only the binary parses args and configures logging.
clap = { version = "4.6", features = ["derive", "env"] }
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[lints]
workspace = true
