[package]
name = "lt-schema-codegen"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[dependencies]
serde.workspace = true
# Crate-specific: this crate exists to parse the GraphQL schema snapshot for
# the two consuming build scripts.
graphql-parser = "0.4"

[lints]
workspace = true
