[package]
name = "lt-schema-codegen"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[dependencies]
serde.workspace = true
# Crate-specific: this crate exists to parse the GraphQL schema snapshot and
# generate source for the two consuming build scripts.
graphql-parser = "0.4"
prettyplease = "0.2"
proc-macro2 = "1"
quote = "1"
syn = { version = "2", default-features = false, features = ["full", "parsing"] }

[lints]
workspace = true
