[package]
name = "lt-schema-codegen"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[dependencies]
# Crate-specific: offline SDL parser for the schema-driven codegen extraction
# core (selection_model/schema_model).
cynic-parser = "0.11"
prettyplease = "0.2"
proc-macro2 = "1"
quote = "1"
syn = { version = "2", default-features = false, features = ["full", "parsing"] }

[dev-dependencies]
insta.workspace = true

[lints]
workspace = true
