[package]
name = "lt-storage"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[package.metadata.cargo-machete]
# chumsky is used only by the parser generated into OUT_DIR/search_stems.rs,
# which cargo-machete does not scan, so it would otherwise read as unused.
ignored = ["chumsky"]

[dependencies]
lt-config.workspace = true
lt-upstream.workspace = true
anyhow.workspace = true
base64.workspace = true
chrono.workspace = true
dirs.workspace = true
rand.workspace = true
rusqlite.workspace = true
tracing.workspace = true
chumsky = "0.13"
fake = { version = "5.1.0", default-features = false, optional = true }

[build-dependencies]
lt-schema-codegen.workspace = true
proc-macro2 = "1"
quote = "1"
toml = "1"

[dev-dependencies]
criterion = "0.5"
tempfile = "3"

[[bench]]
name = "seed"
harness = false
required-features = ["fake"]

[features]
# Deterministic simulation testing. See docs/design/dst.md.
fake = ["dep:fake"]
# Expose test-only helpers (in-memory DB, sample data) to dependent crates.
test-util = []

[lints]
workspace = true
