[package]
name = "lt-tui"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[dependencies]
lt-types.workspace = true
lt-storage.workspace = true
anyhow.workspace = true
chrono.workspace = true
crossterm.workspace = true
open.workspace = true
pulldown-cmark.workspace = true
ratatui.workspace = true
rusqlite.workspace = true

[dev-dependencies]
insta.workspace = true
lt-storage = { workspace = true, features = ["test-util"] }

[features]
sim = ["lt-storage/sim"]

[lints]
workspace = true
