[package]
name = "lt-tui"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[dependencies]
anyhow.workspace = true
chrono.workspace = true
crossterm = "0.29"
lt-runtime.workspace = true
lt-upstream.workspace = true
open.workspace = true
pulldown-cmark = { version = "0.13.4", default-features = false }
ratatui = "0.30.0"
tracing.workspace = true

[dev-dependencies]
insta.workspace = true
lt-runtime = { workspace = true, features = ["test-util", "fake"] }
lt-upstream = { workspace = true, features = ["test-util"] }

[features]
fake = ["lt-runtime/fake"]

[lints]
workspace = true
