[package]
name = "lt-types"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[dependencies]
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
# Crate-specific: the GraphQL schema and query/input types live only here.
cynic = { version = "3.13", default-features = false }
chrono = { workspace = true, features = ["serde"] }

[build-dependencies]
cynic-codegen = "3.13"
lt-schema-codegen.workspace = true
prettyplease = "0.2"
proc-macro2 = "1"
quote = "1"
serde.workspace = true
syn = { version = "2", default-features = false, features = ["full", "parsing"] }
toml = "1"

[features]
test-util = []

[lints]
workspace = true
