[package]
name = "lt-types"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[dependencies]
anyhow.workspace = true
chrono = { workspace = true, features = ["serde"] }
cynic.workspace = true
linear-schema.workspace = true
serde.workspace = true
serde_json.workspace = true

[build-dependencies]
cynic-codegen.workspace = true
lt-schema-codegen.workspace = true
toml = "1"

[features]
test-util = []

[lints]
workspace = true
