[package]
name = "lt-upstream"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[dependencies]
lt-config.workspace = true
lt-types.workspace = true
anyhow.workspace = true
base64.workspace = true
open.workspace = true
rand.workspace = true
serde_json.workspace = true
tracing.workspace = true
# Crate-specific: the OAuth/PKCE flow and HTTP transport live only here.
sha2 = "0.11"
ureq = { version = "3", features = ["json"] }
url = "2"

[dev-dependencies]
lt-types = { workspace = true, features = ["test-util"] }

[features]
# Expose the fake GraphQL transport and re-exported fixtures to dependent
# crates' tests (lt-runtime).
test-util = ["lt-types/test-util"]

[lints]
workspace = true
