[package]
name = "lt-upstream"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[dependencies]
lt-config.workspace = true
lt-types.workspace = true
anyhow.workspace = true
base64.workspace = true
open.workspace = true
rand.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
sha2 = "0.11"
ureq = { version = "3", features = ["json"] }
url = "2"

[dev-dependencies]
chrono.workspace = true
lt-types = { workspace = true, features = ["test-util"] }

[features]
test-util = ["lt-types/test-util"]

[lints]
workspace = true
