[package]
name = "lt-upstream"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[dependencies]
lt-config.workspace = true
linear-schema.workspace = true
anyhow.workspace = true
base64.workspace = true
open.workspace = true
rand.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
sha2 = "0.11"
ureq = { version = "3", features = ["json"] }
url = "2"
# Crate-specific: the GraphQL schema and query/input types live only here.
cynic = { version = "3.13", default-features = false }
chrono = { workspace = true, features = ["serde"] }

[build-dependencies]
cynic-codegen = { version = "3.13", features = ["rkyv"] }
lt-schema-codegen.workspace = true
toml = "1"

[dev-dependencies]
chrono.workspace = true

[features]
test-util = []

[lints]
workspace = true
